[package]
name = "dss_rs"
version = "0.1.0"
authors = ["Timothy Maloney <tim@openenergysolutionsinc.com>"]
edition = "2018"
description = "A safe Rust API for DSS_Extensions' OpenDSS C API"
license = "Apache-2.0"
keywords = ["OpenDSS", "circuit", "simulator"]
repository = "github.com/OES/dss_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["linux_x64"]
linux_x64 = []
unimplemented = ["cap_controls", "capacitors", "circuit", "ckt_element", "dss", "dss_executive", "loads", "reg_controls", ]
cap_controls = []
capacitors = []
circuit = []
ckt_element = []
dss = []
dss_executive = []
loads = []
reg_controls = []