[package]
name = "dss_rs"
version = "0.1.0"
authors = ["Timothy Maloney <tim@openenergysolutionsinc.com>"]
edition = "2018"
description = "A safe Rust API for DSS_Extensions' OpenDSS C API"
license = "Apache-2.0"
keywords = ["OpenDSS", "circuit", "simulator"]
repository = "github.com/OES/dss_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dss_rs_sys = { path = "dss_rs_sys" }
libc = "0.2.126"
raw-parts = "2.0.0"

[features]
default = ["unsafe"]
unsafe = []

[profile.dev]
rpath = true

[profile.release]
rpath = true
